# MLOps-Lab3

./: .coverage  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: CICD.yml  ci.yml
lab1/: __init__.py
lab1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lab1/api/: api.py
lab1/cli/: __init__.py  cli.py
lab1/lab1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lab1/logic/: predictor.py
lab1/models/: onnx_classifier.py  select_export.py  train.py
lab1/preprocessing/: __init__.py  preprocessing.py
models/: best_model.onnx
templates/: home.html
tests/: test_api.py  test_cli.py  test_logic.py  test_model_artifacts.py  test_preprocessing.py
